--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         .products {
             width: 200px;
+            border: 1px solid black;
         }
         .img {
             width: 200px;
