--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </div>
     </div>
 </div>
-<script src="basket.js"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
