--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 <body>
 <div id="app">
+    <div class="slider">
+    </div>
     <div class="catalog">
     </div>
     <div class="cart">
