--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
             font-size: 1.1rem;
         }
 
+        .cart-img {
+            height: 50px;
+            width: 50px;
+            border-radius: 5px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
         .hidden {
             display: none;
         }
